--- a/index.html
+++ b/index.html
@@ -15,15 +15,23 @@
         <div class="logo">Head.</div>
     </div>
 
-        <!-- Navigation Menu -->
 
+    <!-- hidden checkbox to toggle-->
+     <input type="checkbox" id="menu-toggle" class="menu-toggle"/>
+
+
+     <!--label acts as ahamburger button -->
+     <label for="menu-toggle" class="hamburger">&#9776;</label>
+
+
+
+        <!-- Navigation Menu -->
     <nav class="navbar">
       <ul class="nav-list">
         <li><a href="#">Works</a></li>
         <li><a href="#">Services</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
-        <div class="hamburger" id="hamburger">&#9776;</div>       <!-- Hamburger icon for mobile -->
     </nav>
   </header>
 
